# workflow_test

./: Cargo.toml  DEFAULT_CONFIG.json5  NOTICE.md  README.md
.github/: pr-checklists.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: check-labels.yml  ci.yml  label-based-checklist.yml  pr-checklist-verification.yml  release.yml
zenoh-bridge-template/: Cargo.toml
zenoh-bridge-template/.deb/: postinst  postrm
zenoh-bridge-template/.service/: zenoh-bridge-template.service
zenoh-bridge-template/src/: bridge_args.rs  main.rs  zenoh_args.rs
zenoh-plugin-template/: Cargo.toml
zenoh-plugin-template/src/: config.rs  lib.rs
