#
# Copyright (c) 2025 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-plugin-template"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = ["network-programming", "science::robotics"]
description = "Zenoh plugin for TEMPLATE"

[lib]
name = "zenoh_plugin_template"
crate-type = ["cdylib", "rlib"]

[features]
default = ["dynamic_plugin"]
dynamic_plugin = []

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zenoh = { workspace = true }
zenoh-config = { workspace = true }
zenoh-ext = { workspace = true }
zenoh-plugin-trait = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.deb]
name = "zenoh-plugin-template"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2025 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenohd (=1.3.3)"
